# pick-a-watermelon

./: .gitignore  LICENSE  README.md  pyproject.toml
ch10_dimension_reduction/: 10.1.py
ch3-linear-model/: 3.3-LogisticRegression.py
ch3_linear_model/: 3.4.py  3.5-LDA.py  logistic_regression.py  multi_category.py
ch4-decision-tree/: 4.3-gain.py
ch4_decision_tree/: 4.3_gain.py  4.4_gini.py  4.5.py  4.6.py  decision_tree.py
ch5_neural_network/: 5.5.py  5.6.py  5.7.py  bp.py  rbf.py
ch6_support_vector/: 6.2.py  6.4.py  6.8.py
ch7_bayes/: 7.3.py  7.6.py
ch8_ensemble/: 8.3.py  __init__.py  adaboost.py
ch9_cluster/: 9.4.py
