[tool.poetry]
name = "pick-a-watermelon"
version = "0.1.0"
description = ""
authors = ["james.leong <jamesleong27@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.1"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
scikit-learn = "^1.2.0"
ipykernel = "^6.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = 'tsinghua'
default = true
url = 'https://pypi.tuna.tsinghua.edu.cn/simple/'

